--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "node_modules/leaflet/dist/leaflet.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/leaflet-draw/dist/leaflet.draw.css"
             ],
             "scripts": []
           },
